--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ repositories {
         url 'https://maven.enginehub.org/repo/'
     }
     maven {
-        url 'https://jitpack.io' }
+        url 'https://jitpack.io'
+    }
 }
 
 dependencies {
