trying new stuff, poggers

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -8,3 +8,4 @@ max_distance_set: "&aMaximum distance set to &b{distance}"
 center_set: "&aCenter position set to (&b{x}&a, &b{y}&a, &b{z}&a)"
 invalid_number: "&cInvalid number format."
 Error: "Error, you numb nuts"
+not_whitelisted: "World is not whitelisted"
