--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -2,6 +2,8 @@ no_permission: "&cYou do not have permission to use this command."
 only_players: "&cOnly players can use this command."
 usage: "&eUsage: /prtpmind <distance> or /prtpmaxd <distance> or /prtpsetcenter <x> <y> <z>"
 cooldown: "&cYou must wait before using this command again."
+countdown_start: "Teleporting in {time} seconds..."
+countdown_tick: "{time} seconds remaining..."
 teleported: "&aYou have been teleported to a random location!"
 min_distance_set: "&aMinimum distance set to &b{distance}"
 max_distance_set: "&aMaximum distance set to &b{distance}"
