--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,6 +7,8 @@ whitelist:
 #  - 'anotha won'
 min-distance: 100
 max-distance: 1000
+
+teleport_attemtps: 30
 countdown:
   enabled: false
   time: 3
@@ -28,6 +30,3 @@ unsafe-materials:
   - DARK_OAK_LEAVES
   - ACACIA_LEAVES
   - JUNGLE_LEAVES
-  -
-
-    Add a countdown before a player teleports and that can have the time changed and toggled true or false in the config.yml
